= 0.9.10 = * New: Background Image - Options for posts featured image and external url added * New: Add a "MY Block Patterns" folder to your child-theme * Fix: Block Separator alignment options added in style.css * Fix: default_config optimizations * Fix: section_content choices

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Michael Züst
 Author URI: https://zuestmedia.ch/
 Text Domain: zmt-modular
 Domain Path: /languages
-Version: 0.9.9
+Version: 0.9.10
 Description: The ZMT Modular Premium WordPress Theme is a completly customizable multi-purpose-theme created with ZMTheme-Framework.
 Tags: blog, custom-logo, e-commerce, rtl-language-support, grid-layout, one-column, two-columns, custom-background, custom-colors, custom-header, custom-menu, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, accessibility-ready, wide-blocks, block-styles, footer-widgets, portfolio, left-sidebar, right-sidebar
 Requires at least: 4.7
@@ -224,6 +224,16 @@ a img.aligncenter {
   /* replaces inherit */
   pre.wp-block-verse{
     font-family: revert;
+  }
+
+  /* align separator left by default not center */
+  .wp-block-separator {
+  	margin-left:0;
+  	margin-right:0;
+  }
+  .wp-block-separator.aligncenter{
+    margin-left:auto;
+  	margin-right:auto;
   }
 
 /* -------------------------------------------------------------------------- */
